[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "nldate"
version = "0.1.0"
description = "Natural-language date parser"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "mypy>=1",
    "ruff>=0.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"

[tool.mypy]
strict = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "mypy>=1",
    "ruff>=0.8",
]


