[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nl-date-parser"
version = "0.1.0"
description = "English date phrases → datetime.date (DSC 190 calendar-style parser)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/nldate"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
mypy_path = "src"
